--- a/webserver/gallery.html
+++ b/webserver/gallery.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">WEB SERVER</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,9 +36,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/datajson">Data Json</a>
             </li>
           </ul>
         </div>
