--- a/webserver/index.html
+++ b/webserver/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">WEB SERVER</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,20 +31,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/gallery">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/datajson">Data Json</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <div style="text-align: center; margin-top: 30px">
-      <h3>Selamat Datang</h3>
+      <h3>Data JSON</h3>
+      <iframe src="/tampilan" height="800px" width="1000px"></iframe>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
